feat: add battery type

--- a/data/index.html
+++ b/data/index.html
@@ -335,6 +335,9 @@
             <div class="battery-info-content flex">
                 <div class="battery-pack">
                     <div class="flex table-container">
+                        <div class="battery-type-text">
+                            <span class="value-text">0</span>
+                        </div>
                         <!-- TODO: maybe this should be refactored to a template -->
                         <template id="battery-cell-template">
                             <div class="cell">
