feat: move battery type to meta, change getBmsReportedBatteryType to getCapturedBMSBatteryType and add the battery type mapping

--- a/data/index.html
+++ b/data/index.html
@@ -135,6 +135,11 @@
                 <div class="stats-value"><span class="value-text bms-serial-meta"></span><span
                         class="owie-label value-label"></span></div>
             </div>
+            <div class="stat-container">
+                <div><span class="owie-label">BMS BATTERY TYPE</span></div>
+                <div class="stats-value"><span class="value-text bms-battery-type-meta"></span><span
+                        class="owie-label value-label"></span></div>
+            </div>
         </div>
         <template id="stat-container-template">
             <div class="stat-container">
