--- a/data/index.html
+++ b/data/index.html
@@ -104,6 +104,7 @@
             </div>
             <div class="override content">
                 <div>
+                    <label>Reported Battery Type</label>
                     <select id="batteryTypeSelect">
                         <option value="0">Default</option>
                         <option value="1">A123 LiFePO4</option>
