feat: add bms battery life and cycles and clean up some stuff

--- a/data/index.html
+++ b/data/index.html
@@ -106,7 +106,7 @@
                 <div>
                     <label>Reported Battery Type</label>
                     <select id="batteryTypeSelect">
-                        <option value="0">Default</option>
+                        <option value="0">BMS</option>
                         <option value="1">A123 LiFePO4</option>
                         <option value="2">VTC6</option>
                         <option value="3">HG2</option>
@@ -169,6 +169,16 @@
             <div class="stat-container">
                 <div><span class="owie-label">BMS BATTERY TYPE OVERRIDE</span></div>
                 <div class="stats-value"><span class="value-text bms-battery-type-override-meta"></span><span
+                        class="owie-label value-label"></span></div>
+            </div>
+            <div class="stat-container">
+                <div><span class="owie-label">BMS BATTERY LIFE</span></div>
+                <div class="stats-value"><span class="value-text bms-battery-life-meta"></span><span
+                        class="owie-label value-label"></span></div>
+            </div>
+            <div class="stat-container">
+                <div><span class="owie-label">BMS BATTERY CYCLES</span></div>
+                <div class="stats-value"><span class="value-text bms-battery-cycles-meta"></span><span
                         class="owie-label value-label"></span></div>
             </div>
         </div>
