feat: add toggle for overriding the soc percentage

--- a/data/index.html
+++ b/data/index.html
@@ -103,6 +103,10 @@
                 <span class="title">Overrides</span>
             </div>
             <div class="override content">
+                <div style="margin-bottom: 1rem">
+                    <input type="checkbox" id="overrideSocPercentCb">
+                    <label>Override Reported SOC Percentage</label>
+                </div>
                 <div>
                     <label>Reported Battery Type</label>
                     <select id="batteryTypeSelect">
